--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+# Privated env
+/environments/.env.main
+
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
