--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter_dotenv: ^5.0.2
+  mercado_pago_mobile_checkout: ^0.1.1
+  dio: ^4.0.4
+
 
 dev_dependencies:
   flutter_test:
